--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,9 @@ plugins {
 }
 
 repositories {
-    mavenLocal()
-    maven {
-        url = uri('https://repo.maven.apache.org/maven2/')
-    }
+    mavenCentral()
 }
 
-//
 dependencies {
     // spring dependencies
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.5'
@@ -23,6 +19,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.4.5'
     implementation 'org.springframework.boot:spring-boot-starter-websocket:2.4.5'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.4.5'
+
+    // test dependencies
     testImplementation 'org.assertj:assertj-core:3.19.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.5'
     testImplementation 'org.springframework.security:spring-security-test:5.4.6'
@@ -58,6 +56,6 @@ docker {
     name 'connect-gradle'
     tag 'name', 'latest'
     copySpec.from('build/libs/').into('jars')
-    dockerfile file('GradleBuild.Dockerfile')
+    dockerfile file('Gradle.Dockerfile')
     pull true
 }
