--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -12,6 +12,6 @@ spring:
 
   datasource:
     username: glaze
-    password: straightdalmatian
+    password: dalmatian
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/connect
